fix: handle some basic html entities within the markdown

--- a/test.html
+++ b/test.html
@@ -15,6 +15,9 @@ public class MooCakes
 {
 }
 ```
+this should end up looking like &amp; xml: &lt;foo&gt;&lt;bar&gt;whee&lt;/bar&gt;&lt;/foo&gt;
+
+&quot;This should be a quote&quot;
         </pre>
     </body>
 </html>
