fix: deal with chevrons in plan text and code blocks

--- a/test.html
+++ b/test.html
@@ -17,6 +17,8 @@ public class MooCakes
 ```
 this should end up looking like &amp; xml: &lt;foo&gt;&lt;bar&gt;whee&lt;/bar&gt;&lt;/foo&gt;
 
+generic method: `Foo&lt;T&gt;()`
+
 &quot;This should be a quote&quot;
         </pre>
     </body>
