feat: support loading external markdown source, eg from GitHub

--- a/test.html
+++ b/test.html
@@ -21,5 +21,7 @@ generic method: `Foo&lt;T&gt;()`
 
 &quot;This should be a quote&quot;
         </pre>
+
+        <pre class="markdown" data-src="https://raw.githubusercontent.com/fluffynuts/PeanutButter/master/README.md"></pre>
     </body>
 </html>
