test: add self-serving tests fix: code blocks with no newlines will not get hljs so they can be rendered inline

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@ this should end up looking like &amp; xml: &lt;foo&gt;&lt;bar&gt;whee&lt;/bar&gt
 generic method: `Foo&lt;T&gt;()`
 
 &quot;This should be a quote&quot;
+
+"This should also be quoted"
+
+This is a sentence with `embedded` code.
         </pre>
 
         <pre class="markdown" data-src="https://raw.githubusercontent.com/fluffynuts/PeanutButter/master/README.md"></pre>
+
     </body>
 </html>
